--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<img src="me.jpeg">
 			</div>
 			<div class="info">
-				<p>Hello! I'm Jordan Junaidi, a 9th grader currently attending Vista Del Lago High School. I will be graduating in 2024 where I then plan to attend college. I like to do some programming for fun in my free time, and it is most likely going to be staying a part of my life in the future. I am not very advanced yet, but I am doing my best to further enhance my skills and become a better programmer.</p>
+				<p>Hello! I'm Jordan Junaidi, a 10th grader currently attending Vista Del Lago High School. I will be graduating in 2024 where I then plan to attend college. I like to do some programming for fun in my free time, and it is most likely going to be staying a part of my life in the future. I am not very advanced yet, but I am doing my best to further enhance my skills and become a better programmer.</p>
 			</div>
 		</section>
 		<section class="skills" id="skills">
@@ -40,11 +40,11 @@
 			</div>
 			<div class="skills-list">
 				<hr>
-				<p class="language">C++</p>
-				<p>This is the main language that I use. It is my favorite programming language and I will most likely be creating a majority of my future programs using this language.</p>
-				<hr>
 				<p class="language">Python</p>
-				<p>This is another language that I use. I do not use it as often as the other, but I am proficient enough in it to be able to make some programs using it.</p>
+				<p>This is the main language that I use. It is my favorite programming language to use due to its simplicicity and I will most likely be creating a majority of my future programs using this language.</p>
+				<hr>
+				<p class="language">C++</p>
+				<p>This is another language that I am able to use. Now, I do not use it as often as Python, but in the past, I have used it to create several programs.</p>
 				<hr>
 				<p class="language">HTML and CSS</p>
 				<p>Another language that I can use. It is certainly not my specialty, but I am proficient enough in it to be able to create a simple website like this one.</p>
