--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			<div class="skills-list">
 				<hr>
 				<p class="language">Python</p>
-				<p>This is the main language that I use. It is my favorite programming language to use due to its simplicity and I will most likely be creating a majority of my future programs using this language.</p>
+				<p>Python is one of the main languages that I use. I enjoy using it due to its simplicity and I will most likely be creating a majority of my future programs using this language.</p>
 				<hr>
 				<p class="language">C++</p>
-				<p>This is another language that I am able to use. Now, I do not use it as often as Python, but in the past, I have used it to create several programs.</p>
+				<p>C++ is another one of the main languages that I am able to use. Now, I do not use it as often as Python, but in the past, I have used it to create several programs.</p>
 				<hr>
 				<p class="language">HTML and CSS</p>
 				<p>Another language that I can use. It is certainly not my specialty, but I am proficient enough in it to be able to create a simple website like this one.</p>
