--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<section class="first" id="first">
 			<div class="first">
 				<h1>Jordan Junaidi</h1>
-				<h5>High School Student</h5>
+				<h5>High School Sophomore</h5>
 			</div>
 		</section>
 		<section class="about" id="about">
