--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<section class="first" id="first">
 			<div class="first">
 				<h1>Jordan Junaidi</h1>
-				<h5>High School Sophomore</h5>
+				<h5>High School Junior</h5>
 			</div>
 		</section>
 		<section class="about" id="about">
@@ -28,7 +28,7 @@
 				<img src="me.jpeg">
 			</div>
 			<div class="info">
-				<p>Hello! I'm Jordan Junaidi, a 10th grader currently attending Vista Del Lago High School. I will be graduating in 2024 where I then plan to attend college. I like to do some programming for fun in my free time, and it is most likely going to be staying a part of my life in the future. I am not very advanced yet, but I am doing my best to further enhance my skills and become a better programmer.</p>
+				<p>Hello! I'm Jordan Junaidi, a 11th grader currently attending Vista Del Lago High School. I will be graduating in 2024 where I then plan to attend college. I like to do some programming for fun in my free time, and it is most likely going to be staying a part of my life in the future. I am not very advanced yet, but I am doing my best to further enhance my skills and become a better programmer.</p>
 			</div>
 		</section>
 		<section class="skills" id="skills">
