--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<img src="me.jpeg">
 			</div>
 			<div class="info">
-				<p>Hello! I'm Jordan Junaidi, a 11th grader currently attending Vista Del Lago High School. I will be graduating in 2024 where I then plan to attend college. I like to do some programming for fun in my free time, and it is most likely going to be staying a part of my life in the future. I am not very advanced yet, but I am doing my best to further enhance my skills and become a better programmer.</p>
+				<p>Welcome to my website! I built this website from scratch back in 2020 during the COVID-19 pandemic and have continued to update it throughout the years. My name is Jordan Junaidi and I'm a student at the University of California, San Diego, where I study computer science. I'm originally from the Sacramento area and graduated from Vista Del Lago High School in 2024.</p>
 			</div>
 		</section>
 		<section class="skills" id="skills">
