--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<img src="me.jpeg">
 			</div>
 			<div class="info">
-				<p>Welcome to my website! I built this website from scratch back in 2020 during the COVID-19 pandemic and have continued to update it throughout the years. My name is Jordan Junaidi and I'm a student at the University of California, San Diego, where I study computer science. I'm originally from the Sacramento area and graduated from Vista Del Lago High School in 2024.</p>
+				<p>Hey there and welcome to my website! I built this website from scratch back in 2020 during the COVID-19 pandemic and have continued to update it throughout the years. My name is Jordan Junaidi and I'm a student at the University of California, San Diego, where I study computer science. I'm originally from the Sacramento area and graduated from Vista Del Lago High School in 2024.</p>
 			</div>
 		</section>
 		<section class="skills" id="skills">
