Add divider lines
For aesthetic purposes only

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<title>Jordan Junaidi</title>
 </head>
 <body>
 
@@ -38,7 +38,6 @@
 	<div class="dividerContainer">
 		<div class="divider"></div>
 		<div class="divider"></div>
-		<div class="divider"></div>
 	</div>
 
 	<h1>About me</h1>
@@ -46,6 +45,11 @@
 	<div class="about">
 		<img id="selfie" src="img/me.png">
 		<p class="description">Hey, welcome to my personal website! My name is Jordan Junaidi and I am currently a freshman at the University of California, San Diego. I am working towards a Bachelor of Science in Computer Science and am very excited to break into the tech industry. I have a deep interest in innovative technologies that affect everyday life. Outside of the classroom, I love to play video games, play volleyball, and spend time with friends.</p>
+	</div>
+
+	<div class="dividerContainer">
+		<div class="divider"></div>
+		<div class="divider"></div>
 	</div>
 
 	<h1>My Experiences</h1>
@@ -59,12 +63,21 @@
 			</div>
 		</div>
 
+		<div class="dividerContainer">
+			<div class="divider"></div>
+		</div>
+
 		<div class="experience">
 			<img class="logo" src="img/codeninjas.png">
 			<div class="experiencedescription">
 				<h2>Instructor at Code Ninjas</h2>
 				<p>From May 2023-August 2024, I worked as an Instructor at Code Ninjas. My responsibilities were to teach young kids coding.</p>
 		</div>
+	</div>
+
+	<div class="dividerContainer">
+		<div class="divider"></div>
+		<div class="divider"></div>
 	</div>
 
 	<h1>My Skills</h1>
